fix: add spacing in K8s Apply Step Variables Step (#2020)
* fix: add spacing in K8s Apply Step Variables Step

* fix: add spacing in K8s Apply Step Variables Step

--- a/src/modules/70-pipeline/components/PipelineSteps/Steps/Steps.module.scss
+++ b/src/modules/70-pipeline/components/PipelineSteps/Steps/Steps.module.scss
@@ -116,3 +116,7 @@
 .bottomSpacing {
   margin-bottom: var(--spacing-medium);
 }
+
+.topSpacingLarge {
+  margin-top: var(--spacing-large);
+}
